Fixed dark mode behavior and color contrast issue

--- a/src/app/style.scss
+++ b/src/app/style.scss
@@ -72,7 +72,7 @@
 
 // --- Logo ---
 
-:root, [data-bs-theme="light"] {
+[data-bs-theme="light"] {
   .logo-grid {
     color: #087ea4; // React logo color
   }
@@ -101,6 +101,34 @@
 .hero-logo {
   height: 15rem;
   width: auto;
+}
+
+// --- Navbar ---
+
+.rbdg-docs-navbar {
+  background-color: $blue-600;
+
+  @media (forced-colors) {
+    background-color: Canvas;
+  }
+
+  .navbar-brand {
+    color: $white;
+  }
+
+  .nav-link {
+    color: rgba($white, .85);
+
+    &:hover,
+    &:focus {
+      color: $white;
+    }
+
+    &.active {
+      font-weight: 600;
+      color: $white;
+    }
+  }
 }
 
 // --- Shiki themes ---
